Corrected slight spacing error

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .left-hand {
-	margin-right: 50px;	
+	margin-right: 20px;	
 	margin-left: auto;
 }
 
